# NATECH-Motorsport

./: README.md  ideas.md  intro.md
dash_os/: README.md  plan.md  pyproject.toml
dash_os/config/: runtime.yaml
dash_os/docs/: MAIN_DASHBOARD_UI_DESIGN.md  UI_WINDOWS_PLAN.md
dash_os/src/natech_dash_os/: main.py
dash_os/src/natech_dash_os.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
dash_os/src/natech_dash_os/core/: __init__.py  models.py  signal_store.py  warning_engine.py
dash_os/src/natech_dash_os/integrations/: __init__.py  spotify_web_api.py
dash_os/src/natech_dash_os/io/: __init__.py  sensor_gateway.py
dash_os/src/natech_dash_os/runtime/: __init__.py  app_runtime.py  config.py
dash_os/src/natech_dash_os/ui/: __init__.py  native_app.py  race_window.py
